--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -59,6 +59,7 @@
         <div class="contents">
             <div class="col-12 pl-0 pr-0">
                 <form action="" method="POST" class="col-12 pl-0 pr-0">
+                    <input name="data" type="text" value="{{data}}" hidden>
                     {% csrf_token %}
                     {% for question in questions %}
                     <div id="questionScrolling-{{ forloop.counter }}">
@@ -67,6 +68,7 @@
                                 <span style="float: left;">Q{{forloop.counter}} )</span>
                                 {{question.question}}
                             </p>
+                            <input name="que-{{forloop.counter}}" type="text" value="{{question.question}}" hidden>
                         </div>
 
                         <div class="row optionRow mt-5 col-12 mr-0 ml-0">
@@ -77,7 +79,7 @@
                                         <p id="op1" name="option1" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{ question.option1 }}
                                         </p>
-
+                                        <input name="op-1" type="text" value="{{question.option1}}" hidden>
                                     </div>
                                     <div class="col-2 col-lg-1 pl-0 pr-0">
                                         <div class="col-12"
@@ -97,7 +99,7 @@
                                         <p id="op2" name="option2" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{ question.option2 }}
                                         </p>
-
+                                        <input name="op-2" type="text" value="{{question.option2}}" hidden>
                                     </div>
                                     <div class="col-2 col-lg-1 pl-0 pr-0">
                                         <div class="col-12"
@@ -120,7 +122,7 @@
                                         <p id="op3" name="option3" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{ question.option3 }}
                                         </p>
-
+                                        <input name="op-3" type="text" value="{{question.option3}}" hidden>
                                     </div>
                                     <div class="col-2 col-lg-1 pl-0 pr-0">
                                         <div class="col-12"
@@ -140,7 +142,7 @@
                                         <p id="op4" name="option4" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{ question.option4 }}
                                         </p>
-
+                                        <input name="op-4" type="text" value="{{question.option4}}" hidden>
                                     </div>
                                     <div class="col-2 col-lg-1 pl-0 pr-0">
                                         <div class="col-10"
@@ -155,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                    <input type="hidden" name="answer" id="corr_op" value="0">
+                    <input type="number" name="selected-op-{{forloop.counter}}" id="selected-op-{{forloop.counter}}" hidden value="0">
                     {% endfor %}
                     <div class="row col-12 mt-4 mb-4 mr-0 ml-0">
                         <div class="text-center col-12">
@@ -246,6 +248,54 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+
+        <!-- This script is to disable the inspect element -->
+        <script>
+            $(document).bind("contextmenu",function(e) {
+                e.preventDefault();
+            });
+            
+            $(document).keydown(function(e){
+                if(e.which === 123){
+                    return false;
+                }
+            });
+
+            document.onkeydown = function(e) {
+                if(event.keyCode == 123) {
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'S'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'H'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'A'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'F'.charCodeAt(0)){
+                return false;
+                }
+                if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+                return false;
+                }
+                }
+
+        </script>
+
 </body>
 
 </html>
