--- a/studentDashboard/templates/studentDashboard/result.html
+++ b/studentDashboard/templates/studentDashboard/result.html
@@ -10,6 +10,7 @@
     <!-- Google Scripts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.google.com/jsapi">
 
     <!-- Bootstrap Css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -95,21 +96,25 @@
             </div>
         </div>
 
-
+        <input type="hidden" value="{{score}}" id="score">
+        <input type="hidden" value="{{len}}" id="len">
         <div class="contents">
-            <div class="row col-12 m-0">
-                <div class="col-md-6 " id="piechart"></div>
-                <div class="col-md-6 ">
-                    <div class="card myCard" style="width: 20rem;">
+            <div class="row col-12 m-0" style="margin: 0 !important;">
+                <div class="col-lg-6 col-12">
+                    <div id="piechart" style="width: 100%; min-height: 450px;"></div>
+                </div>
+                
+                <div class="col-lg-6 col-12 ">
+                    <div class="card myCard ml-0 mr-0 pr-0 pl-0 col-12 col-md-8">
                         <div class="card-body myCardBody">
-                            <h5 class="card-title">DAA Paper</h5>
-                            <p class="small card-text">Dr. Deepak Mehetre</p>
+                            <h5 class="card-title">{{history.test_id}}</h5>
+                            <p class="small card-text">{{history.test_id.user.first_name}} {{history.test_id.user.last_name}}</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><strong>Percentage:</strong> 55% </li>
-                            <li class="list-group-item"><strong>Type:</strong>Unit Test</li>
-                            <li class="list-group-item"><strong>Date:</strong>Jan. 13, 2021, 4:47 p.m.</li>
-                            <li class="list-group-item"><strong>Date:</strong>Jan. 13, 2021, 4:47 p.m.</li>
+                            <li class="list-group-item"><strong>Percentage:</strong> {{percentage}}% </li>
+                            <li class="list-group-item"><strong>Total:</strong> {{history.test_id.totalMarks}}</li>
+                            <li class="list-group-item"><strong>Duration: </strong> {{history.test_id.examDuration}} min</li>
+                            <li class="list-group-item"><strong>Date:</strong> {{history.test_id.createdOn}}</li>
                         </ul>
                     </div>
                 </div>
@@ -125,7 +130,7 @@
                         <div class="row optionRow mt-5 col-12 mr-0 ml-0">
                             <!-- Option 1 -->
                             {% if i.fields.answer == 1 %}
-                            <div class="col-12 col-md-5 options correctAnswer" id="optionid-1">
+                            <div class="col-11 col-md-5 options correctAnswer" id="optionid-1">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op1" name="option1" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -133,10 +138,20 @@
                                         </p>
 
                                     </div>
+                                    {% if i.fields.selected_option == 1  %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style="font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% else %}
-                            <div class="col-12 col-md-5 options" id="optionid-1">
+                            <div class="col-11 col-md-5 options " id="optionid-1">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op1" name="option1" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -144,6 +159,16 @@
                                         </p>
 
                                     </div>
+                                    {% if i.fields.selected_option == 1 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style="font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% endif %}
@@ -151,18 +176,28 @@
                             
                             <!-- Option 2 -->
                             {% if i.fields.answer == 2 %}
-                            <div class="col-12 col-md-5 options mt-3 mt-md-0 correctAnswer" id="optionid-2">
+                            <div class="col-11 col-md-5 options mt-3 mt-md-0 correctAnswer" id="optionid-2">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op2" name="option2" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{i.fields.option2}}
                                         </p>
-
+                                        
                                     </div>
+                                    {% if i.fields.selected_option  == 2 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style="font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% else %}
-                            <div class="col-12 col-md-5 options mt-3 mt-md-0" id="optionid-2">
+                            <div class="col-11 col-md-5 options mt-3 mt-md-0" id="optionid-2">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op2" name="option2" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -170,6 +205,16 @@
                                         </p>
 
                                     </div>
+                                    {% if i.fields.selected_option == 2 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style=" font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% endif %}
@@ -178,7 +223,7 @@
                         <div class="row optionRow mt-3 mt-lg-4 col-12 mr-0 ml-0 ">
                             <!-- Option 3 -->
                             {% if i.fields.answer == 3 %}
-                            <div class="col-12 col-md-5 options correctAnswer" id="optionid-3">
+                            <div class="col-11 col-md-5 options correctAnswer" id="optionid-3">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op3" name="option3" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -186,10 +231,20 @@
                                         </p>
 
                                     </div>
+                                    {% if i.fields.selected_option == 3 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style="font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% else %}
-                            <div class="col-12 col-md-5 options" id="optionid-3">
+                            <div class="col-11 col-md-5 options" id="optionid-3">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op3" name="option3" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -197,29 +252,59 @@
                                         </p>
 
                                     </div>
+                                    {% if i.fields.selected_option == 3 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style=" font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% endif %}
                             
                             <!-- Option 4 -->
                             {% if i.fields.answer == 4 %}
-                            <div class="col-12 col-md-5 options mt-3 mt-md-0 correctAnswer" id="optionid-4">
+                            <div class="col-11 col-md-5 options mt-3 mt-md-0 correctAnswer" id="optionid-4">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op4" name="option4" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{i.fields.option4}}
                                         </p>
                                     </div>
+                                    {% if i.fields.selected_option == 4 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style="font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% else %}
-                            <div class="col-12 col-md-5 options mt-3 mt-md-0" id="optionid-4">
+                            <div class="col-11 col-md-5 options mt-3 mt-md-0" id="optionid-4">
                                 <div class="row optionContents">
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         <p id="op4" name="option4" class="col-12 mb-0 pl-1 pr-0 optionInput">
                                             {{i.fields.option4}}
                                         </p>
                                     </div>
+                                    {% if i.fields.selected_option == 4 %}
+                                        <div class="col-2 col-lg-1 pl-0 pr-0">
+                                            <div class="col-12"
+                                                style="display: flex; align-items: center; justify-content: center;">
+                                                <span class="material-icons ml-auto mr-auto" style="font-size: 35px;">
+                                                    done_outline
+                                                </span>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             {% endif %}
@@ -233,10 +318,7 @@
     </div>
 
 
-    <!-- Google Pie Charts -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-    <script type="text/javascript" src="{% static 'js/result.js' %}"></script>
+    
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -248,6 +330,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+
+    <!-- Google Pie Charts -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+    <script type="text/javascript" src="{% static 'js/result.js' %}"></script>    
 
 </body>
 
