--- a/studentDashboard/templates/studentDashboard/dashboard.html
+++ b/studentDashboard/templates/studentDashboard/dashboard.html
@@ -105,9 +105,9 @@
                 <div class="col-12 col-sm-10 col-md-4 col-xl-3 ml-auto mr-auto">
                     <div class="card myCard">
                         <div class="card-header myCardHeader">
-                            <p class="card-title mb-0 myCardTitle">Starts In
+                            {% comment %} <p class="card-title mb-0 myCardTitle">Starts In
                             </p>
-                            <p class="mb-0 myCardCounter">10:40:10</p>
+                            <p class="mb-0 myCardCounter">10:40:10</p> {% endcomment %}
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -170,7 +170,7 @@
                                 <div class="col-12">
                                     <p class="card-title mb-0 grayBottomTitle" aria-readonly="true">Posted By
                                         {{test.user.first_name}} {{test.user.last_name}}</p>
-                                    <p class="card-title mb-0 grayBottomTitle" aria-readonly="true">2 Days Ago</p>
+                                    {% comment %} <p class="card-title mb-0 grayBottomTitle" aria-readonly="true">2 Days Ago</p> {% endcomment %}
                                 </div>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
         function OpenPopUpwindow(urlName) {
             var url = "{{ request.path }}studentTest/" + urlName + "/";
             var windowFeatures = "fullscreen=yes, resizable=no, scrollbars=yes , toolbar = no, menubar = no, location = no, directories = no , status = no";
-            window.open(url, 'popUpWindow',[windowFeatures], "width="+screen.availWidth+",height="+screen.availHeight);
+            window.open(url, 'popUpWindow',`fullscreen=1, resizable=0, scrollbars=1 , toolbar=0, menubar=0, location=no, directories=no , status=no, width=${screen.width},height=${screen.height}`);
         }
     </script>
 
