Random Color Function in Student Dashboard Added

--- a/studentDashboard/templates/studentDashboard/dashboard.html
+++ b/studentDashboard/templates/studentDashboard/dashboard.html
@@ -155,7 +155,7 @@
                             </div>
                             <div class="btn-container d-flex justify-content-center p-2 mt-2">
                                 <button id="cardBtn" type="submit" value="Register"
-                                    class="btn btn-secondary col-5 ml-auto mr-auto d-flex align-items-center justify-content-center text-align-center"
+                                    class="btn btn-secondary col-5 ml-auto mr-auto d-flex align-items-center justify-content-center text-align-center cardBtn"
                                     onclick="OpenPopUpwindow('{{test.id}}')">
                                     Start
                                     <div class="loader" style="display: none;" id="loader">
@@ -182,6 +182,20 @@
 
     </div>
 
+
+    <!-- Random color script for test card headers -->
+    <script>
+        window.onload = function() {
+            var listOfColors = ['#F2EA02', '#FF3300', '#00FF66', '#0062FF', '#FF0099', '#6E0DD0'];
+            var cardHeaders = document.getElementsByClassName("myCardHeader");
+            var cardBtns = document.getElementsByClassName("cardBtn");
+            for(let i = 0; i < cardHeaders.length; i++){
+                let randomNumber = Math.floor(Math.random() * 6);
+                cardHeaders[i].style.backgroundColor=listOfColors[randomNumber];
+                cardBtn[i].style.backgroundColor=listOfColors[randomNumber];
+            }
+        };
+    </script>
 
     <!-- For Exam Page new pop up window -->
     <script type="text/javascript">
