--- a/studentDashboard/templates/studentDashboard/student_test_page.html
+++ b/studentDashboard/templates/studentDashboard/student_test_page.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../../../static/css/student_test_page.css">
 
 
-    <script defer src="{% static 'js/face-api.min.js' %}"></script>
+    <script defer src="{% static 'js/face-api.min.js' %}"></script> 
     <script defer src="{% static 'js/faceDetection-script.js' %}"></script>
     <style>
         canvas {
@@ -67,7 +67,7 @@
                         <div class="col-12 questionDiv">
                             {%if question.question|length > 2000%}
 
-                            <img src="{{question.question}}" alt="Question IMg" height="300" width="300"
+                            <img src="{{question.question}}" alt="Question IMg" height="300" width="auto"
                                 style="display: block !important;">
                             {% else %}
                             <p class="question col-12 " name="question" id="qtext">
@@ -86,7 +86,7 @@
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         {%if question.option1|length > 2000%}
 
-                                        <img src="{{question.option1}}" alt="Question IMg" height="300" width="300"
+                                        <img src="{{question.option1}}" alt="Question IMg" height="100px" width="auto"
                                             style="display: block !important;">
                                         {% else %}
                                         <p id="op1" name="option1" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -112,7 +112,7 @@
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         {%if question.option2|length > 2000%}
 
-                                        <img src="{{question.option2}}" alt="Question IMg" height="300" width="300"
+                                        <img src="{{question.option2}}" alt="Question IMg" height="100px" width="auto"
                                             style="display: block !important;">
                                         {% else %}
                                         <p id="op2" name="option2" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -141,7 +141,7 @@
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         {%if question.option3|length > 2000%}
 
-                                        <img src="{{question.option3}}" alt="Question IMg" height="300" width="300"
+                                        <img src="{{question.option3}}" alt="Question IMg" height="100px" width="auto"
                                             style="display: block !important;">
                                         {% else %}
                                         <p id="op3" name="option3" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -167,7 +167,7 @@
                                     <div class="col-9 col-lg-10 pl-0 pr-0">
                                         {%if question.option4|length > 2000%}
 
-                                        <img src="{{question.option4}}" alt="Question IMg" height="300" width="300"
+                                        <img src="{{question.option4}}" alt="Question IMg" height="100px" width="140px"
                                             style="display: block !important;">
                                         {% else %}
                                         <p id="op4" name="option4" class="col-12 mb-0 pl-1 pr-0 optionInput">
@@ -212,11 +212,12 @@
 
         <!-- Side Bar -->
         <div class="questionBar">
-
-            <div class="timerDiv">
-                <p class="Timer"> 04:30:22 </p>
-            </div>
-
+            <form action="{% url 'studentTest' test.id %}" id="timer-form">
+                {% csrf_token %}
+                <div class="timerDiv">
+                    <p class="Timer" id="timer"></p>
+                </div>
+            </form>
             <div class=" questionTable">
                 <div class="row col-12 m-0 ">
                     {% for question in questions %}
@@ -310,6 +311,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>    
 
     <!-- This script is to disable the inspect element -->
     {% comment %}
@@ -358,6 +361,82 @@
         }
 
     </script> {% endcomment %}
+
+    {% comment %} Ajax code to Updated Timer {% endcomment %}
+    <script>
+        window.setInterval(
+            function ajax_func(){
+                var test_id = {{test.id}};
+                console.log(test_id);
+                var time = document.getElementById('timer').textContent;
+                console.log(time);
+                var url=document.getElementById("timer-form").action
+                $.ajax({
+                    type: 'GET',
+                    url: url,
+                    data : {
+                        'time' : time,
+                        'test_id':parseInt(test_id),
+                    }
+                })
+            }
+            
+            ,30000)
+    </script>
+
+    {% comment %} Timer Logic {% endcomment %}
+    <script>
+        let timeInMins = {{test.examDuration}}
+        
+        //Time Calculation
+        var hours   = Math.floor(timeInMins/ 60);
+        var minutes = Math.floor((timeInMins - ((hours * 3600)) / 60));
+        var seconds = Math.floor((timeInMins * 60) - (hours * 3600) - (minutes * 60));
+        seconds=59;
+        --minutes;
+        var x = setInterval(function() {
+            document.getElementById("timer").innerHTML =hours + " : " + minutes + " : " + seconds;
+            --seconds;
+            if (seconds < 0) {
+                if(minutes > 0){
+                    --minutes;   
+                }
+                seconds = 59;
+                if (minutes == 0) {
+                    if(hours > 0){
+                        --hours;
+                        minutes=59;
+                    } else{
+                        hours=0
+                        minutes=0;
+                    }
+                }
+            }
+            // }if(minutes<0){
+            //     if(hours > 0){
+            //             hours--;
+            //             minutes = 59;
+            //         } else{
+            //             hours=0;
+            //             if(minutes==0){
+            //                 minutes=0;
+            //             }else{
+            //                 minutes--;
+            //             }
+            //         }
+                    
+                 
+            // }
+            if(hours == 0){
+                hours = 0;
+            }
+            if(hours==0 && minutes == 0 && seconds == 0){
+                document.getElementById("timer").innerHTML = "00:00:00";
+                clearInterval(x);
+                 alert("Test Over")
+            }
+        }, 1000);
+    </script>
 
 </body>
 
